# CADA

./: .gitignore  CHANGELOG.md  cada.cabal  flake.nix
.github/workflows/: haskell.yml
app/: Main.hs  diff.hs
src/: Diff.hs
