cabal-version:      3.0
name:               cada
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chaitanya
maintainer:         chaitanya.nair@juspay.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cada
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, haskell-tools-parser, fdep,process,directory
    hs-source-dirs:   app
    other-modules: Diff
    default-language: Haskell2010
