cabal-version:      3.0
name:               cada
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chaitanya
maintainer:         chaitanya.nair@juspay.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Diff
    build-depends: ghc, bytestring,aeson-pretty,references,uniplate,base,haskell-tools-prettyprint, haskell-tools-parser,process,directory, haskell-src-exts, async, regex-posix, haskell-tools-ast, unordered-containers, text, deriving-compat, regex-compat, aeson, utf8-string, extra
    hs-source-dirs:   src
    default-language: Haskell2010

executable cada
    main-is:          Main.hs
    build-depends:    base, haskell-tools-parser,uniplate,process,directory,cada, deriving-compat,aeson-pretty,references
    hs-source-dirs:   app
    default-language: Haskell2010