cabal-version:      3.0
name:               cada
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Chaitanya
maintainer:         chaitanya.nair@juspay.in

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Diff
    build-depends: 
        ghc, 
        aeson-pretty,
        base,
        process,
        directory, 
        async, 
        regex-posix, 
        unordered-containers, 
        text, 
        deriving-compat, 
        regex-compat, 
        aeson, 
        utf8-string, 
        extra,
        ghc-boot
        , uniplate
        , references
        , classyplate
        , ghc-paths
        , bytestring
        , filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable cada
    main-is:          Main.hs
    build-depends:
        base, 
        process,
        directory,
        cada, 
        deriving-compat,
        aeson-pretty,
    hs-source-dirs:   app
    default-language: Haskell2010